force-app/main/default/objects/Lead/fields/Cancelled_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Reasons__c</fullName>
    <label>Cancelled Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CA_Opp_Lead_Cancelled_Reasons</valueSetName>
    </valueSet>
</CustomField>