force-app/main/default/objects/Lead/fields/Currently_Use_CGM__c.field-meta.xml
<CustomField>
    <fullName>Currently_Use_CGM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by webform</description>
    <label>Currently Use CGM</label>
    <type>Checkbox</type>
</CustomField>