force-app/main/default/objects/Lead/fields/Dexcom_Preference__c.field-meta.xml
<CustomField>
    <fullName>Dexcom_Preference__c</fullName>
    <label>Dexcom Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alarmplan</fullName>
            </value>
            <value>
                <fullName>Share / Follow</fullName>
            </value>
            <value>
                <fullName>Smartphones</fullName>
            </value>
            <value>
                <fullName>Clarity</fullName>
            </value>
            <value>
                <fullName>Accuracy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>