force-app/main/default/objects/Lead/fields/Diabetes_Condition__c.field-meta.xml
<CustomField>
    <fullName>Diabetes_Condition__c</fullName>
    <description>Used by Lead webform</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Diabetes Condition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>