force-app/main/default/objects/Lead/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>District</label>
    <length>50</length>
    <type>Text</type>
</CustomField>