force-app/main/default/objects/Lead/fields/Email_Double_Opt_In_Subscriber__c.field-meta.xml
<CustomField>
    <fullName>Email_Double_Opt_In_Subscriber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Double Opt In Subscriber</label>
    <type>DateTime</type>
</CustomField>