force-app/main/default/objects/Lead/fields/Email_Opt_In_Language__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_In_Language__c</fullName>
    <label>Email Opt In Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EU_Language_Options</valueSetName>
    </valueSet>
</CustomField>