force-app/main/default/objects/Lead/fields/Email_Opt_In_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_In_Last_Modified__c</fullName>
    <description>Date/Time the Lead opted into Email</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Opt In Last Modified</label>
    <type>DateTime</type>
</CustomField>