force-app/main/default/objects/Lead/fields/Email_Opt_Out_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_Out_Last_Modified__c</fullName>
    <description>This field captures the date/time when the person opted out</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Captures the date/time when the person Opted Out</inlineHelpText>
    <label>Email Opt Out Last Modified</label>
    <type>DateTime</type>
</CustomField>