force-app/main/default/objects/Lead/fields/Email_Pending_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Email_Pending_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Pending Opt In</label>
    <type>Checkbox</type>
</CustomField>