force-app/main/default/objects/Lead/fields/Email_Pending_Opt_In_Reset__c.field-meta.xml
<CustomField>
    <fullName>Email_Pending_Opt_In_Reset__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If an email address is changed or the customer requires a new confirmation email this box should be checked</description>
    <label>Email Pending Opt In Reset</label>
    <type>Checkbox</type>
</CustomField>