force-app/main/default/objects/Lead/fields/Feedback_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Inquiry__c</fullName>
    <description>Feedback or Inquiry from the customer</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Feedback or Inquiry from the customer</inlineHelpText>
    <label>Feedback/Inquiry</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>