force-app/main/default/objects/Lead/fields/For_Whom_Are_You_Seeking_Information__c.field-meta.xml
<CustomField>
    <fullName>For_Whom_Are_You_Seeking_Information__c</fullName>
    <label>For Whom Are You Seeking Information?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Myself</fullName>
            </value>
            <value>
                <fullName>My child/family member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>