force-app/main/default/objects/Lead/fields/GDPR_Consent_General__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Consent_General__c</fullName>
    <label>GDPR Consent: General</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>