force-app/main/default/objects/Lead/fields/GDPR_Consent_Other_Request__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Consent_Other_Request__c</fullName>
    <label>GDPR Consent: Other Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>