force-app/main/default/objects/Lead/fields/Guardian_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Last_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Guardian Last Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>