force-app/main/default/objects/Lead/fields/Hospital_Clinic_Name__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Clinic_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hospital Clinic Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>