force-app/main/default/objects/Lead/fields/Insurance_Help_Type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Help_Type__c</fullName>
    <label>Insurance Help Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Public/Government Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>