force-app/main/default/objects/Lead/fields/Lead_Convert__c.field-meta.xml
<CustomField>
    <fullName>Lead_Convert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>lead conversion</description>
    <label>Lead Convert</label>
    <type>Checkbox</type>
</CustomField>