force-app/main/default/objects/Lead/fields/Medical_Facility__c.field-meta.xml
<CustomField>
    <fullName>Medical_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tracks the medical facility, which will be passed on to the Account at the time of conversion.</description>
    <label>Medical Facility</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Record_Type_Name__c</field>
            <operation>contains</operation>
            <value>Medical Facility</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Medical Facility Leads</relationshipLabel>
    <relationshipName>Medical_Facility_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>