force-app/main/default/objects/Lead/fields/Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Member_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Member ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>