force-app/main/default/objects/Lead/fields/Mktg_Journey_Touch_Points__c.field-meta.xml
<CustomField>
    <fullName>Mktg_Journey_Touch_Points__c</fullName>
    <label>Mktg Journey Touch Points</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registration Completed</fullName>
            </value>
            <value>
                <fullName>First Survey Completed</fullName>
            </value>
            <value>
                <fullName>Joined Dexcom Family</fullName>
            </value>
            <value>
                <fullName>Second Sensor Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>