force-app/main/default/objects/Lead/fields/Mobile_Device__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Device__c</fullName>
    <label>Mobile Device</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Android</fullName>
            </value>
            <value>
                <fullName>iOS</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>