force-app/main/default/objects/Lead/fields/On_30_Day_Trial__c.field-meta.xml
<CustomField>
    <fullName>On_30_Day_Trial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Trial?</label>
    <type>Checkbox</type>
</CustomField>