force-app/main/default/objects/Lead/fields/Other_Web_Form_Information__c.field-meta.xml
<CustomField>
    <fullName>Other_Web_Form_Information__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Web Form Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>