force-app/main/default/objects/Lead/fields/Patient_Diabetes_Therapy__c.field-meta.xml
<CustomField>
    <fullName>Patient_Diabetes_Therapy__c</fullName>
    <label>Patient&apos;s Diabetes Therapy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Insulin_Therapy_Types</valueSetName>
    </valueSet>
</CustomField>