force-app/main/default/objects/Lead/fields/Patient_Diabetes_Type__c.field-meta.xml
<CustomField>
    <fullName>Patient_Diabetes_Type__c</fullName>
    <label>Patient Diabetes Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Type 1</fullName>
            </value>
            <value>
                <fullName>Type 2</fullName>
            </value>
            <value>
                <fullName>Gestational</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>