force-app/main/default/objects/Lead/fields/Physician_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Physician_First_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>