force-app/main/default/objects/Lead/fields/Physician_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Physician_Last_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>