force-app/main/default/objects/Lead/fields/Preferred_Contact_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact_Time__c</fullName>
    <label>Preferred Contact Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone call in the morning (between 9AM to 12PM)</fullName>
            </value>
            <value>
                <fullName>Phone call during lunch (between 12PM to 2PM)</fullName>
            </value>
            <value>
                <fullName>Phone call in the evening (between 2PM to 6PM)</fullName>
            </value>
            <value>
                <fullName>Email with more Information and Instructions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>