force-app/main/default/objects/Lead/fields/Prescriber__c.field-meta.xml
<CustomField>
    <fullName>Prescriber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tracks the Prescriber, which will be passed on to the Account at the time of conversion.</description>
    <label>Prescriber</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Record_Type_Name__c</field>
            <operation>contains</operation>
            <value>Prescriber</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Prescriber)</relationshipLabel>
    <relationshipName>Prescriber_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>