force-app/main/default/objects/Lead/fields/Read_Data_Protection_Act__c.field-meta.xml
<CustomField>
    <fullName>Read_Data_Protection_Act__c</fullName>
    <label>Read Data Protection Act</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>