force-app/main/default/objects/Lead/fields/Receiver_Option__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Option__c</fullName>
    <label>Receiver Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>With Dexcom Receiver</fullName>
            </value>
            <value>
                <fullName>Without Dexcom Receiver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>