force-app/main/default/objects/Lead/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>