force-app/main/default/objects/Lead/fields/Sample_Join__c.field-meta.xml
<CustomField>
    <fullName>Sample_Join__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To track whether a patient has joined the Sample Program.</description>
    <label>Sample Join</label>
    <type>Checkbox</type>
</CustomField>