force-app/main/default/objects/Lead/fields/Secondary_Email__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Email</label>
    <type>Email</type>
</CustomField>