force-app/main/default/objects/Lead/fields/Story__c.field-meta.xml
<CustomField>
    <fullName>Story__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Story</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>