force-app/main/default/objects/Lead/fields/Therapy__c.field-meta.xml
<CustomField>
    <fullName>Therapy__c</fullName>
    <label>Therapy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Typ 1+ ICT</fullName>
            </value>
            <value>
                <fullName>Typ 1+ Pump</fullName>
            </value>
            <value>
                <fullName>Typ 2+ ICT</fullName>
            </value>
            <value>
                <fullName>Typ 2+Pumpe</fullName>
            </value>
            <value>
                <fullName>Typ 2 + non insulin injections</fullName>
            </value>
            <value>
                <fullName>Other + Insulin</fullName>
            </value>
            <value>
                <fullName>Other + non insulin injections</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>