force-app/main/default/objects/Lead/fields/Unit_Of_Measurement__c.field-meta.xml
<CustomField>
    <fullName>Unit_Of_Measurement__c</fullName>
    <label>Unit Of Measurement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>mg/dl</fullName>
            </value>
            <value>
                <fullName>mmol/l</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>