force-app/main/default/objects/Lead/fields/Zip_To_Align__c.field-meta.xml
<CustomField>
    <fullName>Zip_To_Align__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zip To Align</label>
    <length>100</length>
    <type>Text</type>
</CustomField>