force-app/main/default/objects/Lead/recordTypes/AT_Person_Lead.recordType-meta.xml
<RecordType>
    <fullName>AT_Person_Lead</fullName>
    <active>true</active>
    <businessProcess>AT Person Leads</businessProcess>
    <description>Austria Lead</description>
    <label>AT Person Lead</label>
</RecordType>