force-app/main/default/objects/Lead/recordTypes/CA_Person_Lead.recordType-meta.xml
<RecordType>
    <fullName>CA_Person_Lead</fullName>
    <active>true</active>
    <businessProcess>CA Person Leads</businessProcess>
    <description>Canadian Consumer Lead</description>
    <label>CA Person Lead</label>
</RecordType>