force-app/main/default/objects/Lead/recordTypes/CH_Person_Lead.recordType-meta.xml
<RecordType>
    <fullName>CH_Person_Lead</fullName>
    <active>true</active>
    <businessProcess>CH Person Leads</businessProcess>
    <description>Switzerland Lead</description>
    <label>CH Person Lead</label>
</RecordType>