force-app/main/default/objects/Lead/recordTypes/DE_Person_Lead.recordType-meta.xml
<RecordType>
    <fullName>DE_Person_Lead</fullName>
    <active>true</active>
    <businessProcess>DE Person Leads</businessProcess>
    <description>Jagan 06/22/2017 - Process to track record type for person leads.</description>
    <label>DE Person Lead</label>
</RecordType>