force-app/main/default/objects/Lead/recordTypes/GB_Person_Lead.recordType-meta.xml
<RecordType>
    <fullName>GB_Person_Lead</fullName>
    <active>true</active>
    <businessProcess>GB and IE Person Leads</businessProcess>
    <description>GB Lead</description>
    <label>GB Person Lead</label>
</RecordType>