force-app/main/default/objects/Lead/recordTypes/IE_Person_Lead.recordType-meta.xml
<RecordType>
    <fullName>IE_Person_Lead</fullName>
    <active>true</active>
    <businessProcess>GB and IE Person Leads</businessProcess>
    <description>Ireland Lead</description>
    <label>IE Person Lead</label>
</RecordType>