force-app/main/default/objects/Lead/recordTypes/SI_Person_Lead.recordType-meta.xml
<RecordType>
    <fullName>SI_Person_Lead</fullName>
    <active>true</active>
    <businessProcess>SI Person Leads</businessProcess>
    <description>Slovenia Leads</description>
    <label>SI Person Lead</label>
</RecordType>