force-app/main/default/objects/Lead/validationRules/All_Block_Email_Opt_In_List_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>All_Block_Email_Opt_In_List_Update</fullName>
    <active>true</active>
    <description>This Rule will not allow to update the Email Opt-In picklist.</description>
    <errorConditionFormula>AND(
	$Profile.Name = &quot;System Administrator&quot;,
	$Profile.Name = &quot;Data Integrator&quot;,
	CONTAINS(RecordType.DeveloperName, &apos;Person&apos;),
	OR(
		AND(ISNEW(), ISPICKVAL(Email_Opt_In_List__c, &quot;True&quot;)),
		ISCHANGED(Email_Opt_In_List__c)
	)
)</errorConditionFormula>
    <errorMessage>You are not allowed to change this field. Please use the &apos;Email Pending Opt In&apos; and &apos;Email Pending Opt Out&apos; checkboxes instead.</errorMessage>
</ValidationRule>