force-app/main/default/objects/Lead/validationRules/AT_Billing_Address_Required_For_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>AT_Billing_Address_Required_For_Lead</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
BEGINS(RecordType.DeveloperName, &apos;AT_Person_Lead&apos;),
OR( ISBLANK(City )
, ISBLANK(Country ),ISBLANK( Street ),ISBLANK( PostalCode )))</errorConditionFormula>
    <errorMessage>Street, City, Zip and Country are required to create a Lead.</errorMessage>
</ValidationRule>