force-app/main/default/objects/Lead/validationRules/AT_Preferred_Language_Required_For_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>AT_Preferred_Language_Required_For_Lead</fullName>
    <active>true</active>
    <description>Preferred Language is required.</description>
    <errorConditionFormula>AND(
NOT($Profile.Name = &quot;System Administrator&quot;),
NOT($Profile.Name = &quot;Data Integrator&quot;),
NOT($User.Alias = &quot;autoproc&quot;),
BEGINS(RecordType.DeveloperName, &apos;AT_Person_Lead&apos;),
ISBLANK(TEXT(Preferred_Language__c))
)</errorConditionFormula>
    <errorMessage>Preferred Language is required.</errorMessage>
</ValidationRule>