force-app/main/default/objects/Lead/validationRules/AT_Trial_Dates_Shd_B_Filled.validationRule-meta.xml
<ValidationRule>
    <fullName>AT_Trial_Dates_Shd_B_Filled</fullName>
    <active>true</active>
    <description>For Austria, if the Lead is going through 30 day trail, Trial Start and End dates should be filled.</description>
    <errorConditionFormula>AND( On_30_Day_Trial__c ,
OR(ISBLANK( Trial_Start_Date__c ), 
   ISBLANK(Trial_End_Date__c )))</errorConditionFormula>
    <errorMessage>IF the Lead is on 30 day trial, both Trial Start Date and Trial End Date should be filled.</errorMessage>
</ValidationRule>