force-app/main/default/objects/Lead/validationRules/AT_Trial_End_Date_Shd_B_GT_ST_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>AT_Trial_End_Date_Shd_B_GT_ST_Date</fullName>
    <active>true</active>
    <description>For Austria, Trial End Date should not be less than Trial Start Date.</description>
    <errorConditionFormula>AND( On_30_Day_Trial__c ,
Trial_Start_Date__c &gt; 
Trial_End_Date__c )</errorConditionFormula>
    <errorMessage>Trial End Date should not be earlier than Trial Start Date.</errorMessage>
</ValidationRule>