force-app/main/default/objects/Lead/validationRules/CA_Cancelled_Reason_required.validationRule-meta.xml
<ValidationRule>
    <fullName>CA_Cancelled_Reason_required</fullName>
    <active>true</active>
    <description>Cancelled Reason is required when a Lead is Cancelled</description>
    <errorConditionFormula>AND(ISCHANGED( Status ) ,
 ISPICKVAL(Status, &apos;Cancelled&apos;),
 ISBLANK( Cancelled_Reasons__c )  )</errorConditionFormula>
    <errorMessage>Cancelled Reason(s) required for Cancelled Leads.</errorMessage>
</ValidationRule>